--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Mon Aug 26 14:20:14 MSK 2019
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-bin.zip
+#Mon May 10 09:43:56 MSK 2021
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
